ds listing page added view edit clone edit delete api actions

--- a/src/app/home/service-manager/ds-grid-actions/ds-grid-actions.component.html
+++ b/src/app/home/service-manager/ds-grid-actions/ds-grid-actions.component.html
@@ -1,8 +1,10 @@
-<div class="actions ">
-    <button *ngIf="isStartStop()" id='stop{{params.rowIndex}}' type="button" class="btn btn-link text-dark fw-600 hover" (click)="toggleServiceStatus()">
+<div class="actions" [ngStyle]="showAction()">
+    <button *ngIf="isStartStop()" id='stop{{params.rowIndex}}' type="button" class="btn btn-link text-dark fw-600 hover"
+        (click)="toggleServiceStatus()">
         <span *ngIf="params.value == 'Stopped'">Start</span>
         <span *ngIf="params.value == 'Active'">Stop</span>
     </button>
-    <button *ngIf="isDeploy()" id='deploy{{params.rowIndex}}' type="button" class="btn btn-link text-dark fw-600" (click)="deployService()">Deploy</button>
-    <i class="fa fas fa-ellipsis-v ml-2"></i>
+    <button *ngIf="isDeploy()" id='deploy{{params.rowIndex}}' type="button" class="btn btn-link text-dark fw-600"
+        (click)="deployService()">Deploy</button>
+    <i class="fa fas fa-ellipsis-v ml-2" (click)="selectContextMenu($event)"></i>
 </div>
