--- a/src/app/home/service-manager/service-manager.component.scss
+++ b/src/app/home/service-manager/service-manager.component.scss
@@ -329,3 +329,21 @@
   border-radius: 4px;
 }
 }
+
+.context-menu {
+  min-width: 180px;
+  max-width: 180px;
+  min-height: 30px;
+  max-height: 160px;
+  background: #fff 0 0 no-repeat padding-box;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+  border: 1px solid #ececec;
+  border-radius: 6px;
+  opacity: 1;
+  align-items: flex-start;
+  button {
+    &:hover {
+      background-color: $light;
+    }
+  }
+}
