--- a/src/app/home/service-manager/service-manager.component.html
+++ b/src/app/home/service-manager/service-manager.component.html
@@ -26,8 +26,8 @@
       </div>
     </div>
   </div>
-  <div class="d-flex flex-column w-100">
-    <div class="card-container pt-3" (scroll)="loadMore($event)">
+  <div class="d-flex flex-column w-100  position-relative">
+    <div class="card-container pt-3 " (scroll)="loadMore($event)" odpClickOutside (outside)="showContextMenu = false">
       <div class="card m-2 add-card hover" (click)="newService()" id="createEntity" *ngIf="
           hasCreatePermission('SM') &&
           (!serviceList || serviceList.length == 0) &&
@@ -44,9 +44,26 @@
           </div>
         </div>
       </div>
-      <ag-grid-angular *ngIf="serviceList.length > 0" #agGrid  class="ag-theme-balham grid w-100 h-100" [gridOptions]="gridOptions"
-        (gridReady)="onGridReady($event)">
+      <ag-grid-angular *ngIf="serviceList.length > 0" #agGrid class="ag-theme-balham grid w-100 h-100"
+        [gridOptions]="gridOptions" (gridReady)="onGridReady($event)" (scroll)="showContextMenu = false">
       </ag-grid-angular>
+      <div class="  d-flex flex-column position-absolute context-menu"
+        *ngIf="showContextMenu && serviceList[selectedRowIndex].status != 'Pending' && serviceList[selectedRowIndex].status != 'Maintenance'"
+        [ngStyle]="getPosition()">
+        <button class="btn btn-link d-flex w-100 text-dark"
+          [routerLink]="['/app', app, 'sb', serviceList[selectedRowIndex]._id]" id="_viewEntity"> View</button>
+        <button class="btn btn-link d-flex w-100 text-dark"
+          *ngIf="canEditService(serviceList[selectedRowIndex]._id) && serviceList[selectedRowIndex].type != 'internal'"
+          (click)="editService(selectedRowIndex)"> Edit</button>
+        <button class="btn btn-link d-flex w-100 text-dark" *ngIf="canCloneService(serviceList[selectedRowIndex]._id)"
+          (click)="cloneService(selectedRowIndex);closeContextMenu();"> Clone</button>
+        <button class="btn btn-link d-flex w-100 text-dark" *ngIf="canDeleteService(serviceList[selectedRowIndex]._id) &&
+        serviceList[selectedRowIndex].type != 'internal'"
+          (click)="deleteService(selectedRowIndex);closeContextMenu();"> Delete</button>
+        <button class="btn btn-link d-flex w-100 text-dark" (click)="openDocs(selectedRowIndex);closeContextMenu();">
+          API</button>
+
+      </div>
       <!-- <ng-container *ngFor="let service of serviceList; let i = index">
         <div class="card m-2 position-relative" id="serviceManagerCard" *ngIf="hasPermissionForService(service._id)">
           <div class="card-header bg-white border-0 p-2">
