--- a/src/app/home/control-panel/user/user.component.html
+++ b/src/app/home/control-panel/user/user.component.html
@@ -26,13 +26,13 @@
             <!-- <span class="text">Bulk Import</span> -->
           </button>
         </div>
-        <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn btn-dark mr-2"
-          routerLink="bulk-import" ngbTooltip="Bulk Import" id="bulkimport">
+        <button *ngIf="hasPermission('PMUBC')" type="button" class="add-new btn btn-dark mr-2" routerLink="bulk-import"
+          ngbTooltip="Bulk Import" id="bulkimport">
           <span class="fa fa-upload"></span>
           <!-- <span class="text">Bulk Import</span> -->
         </button>
         <button *ngIf="hasPermission('PMUBC')" type="button" id="newUser" class="add-new btn btn-primary"
-         (click)="newUser()">
+          (click)="newUser()">
           <span class="fa fa-plus"></span>
           <!-- <span class="text">Add User</span> -->
         </button>
@@ -45,18 +45,18 @@
         No users found
       </div>
       <div class="row" style="max-height: inherit" *ngIf="userList.length > 0">
-        <div class="col-4 users">
+        <div class="col-4 border-right users">
           <div *ngFor="let user of userList; let usrIndex = index" class="d-flex" [id]="'user' + usrIndex"
             (click)="showDetails(user)">
             <div class="selectedTab" [ngStyle]="{
                 background: user._id === details?._id ? '#ff6f00' : 'none'
               }"></div>
             <div class="userList" style="flex-grow: 1" [ngClass]="{ selected: user._id === details?._id }">
-              <div style="display: flex">
+              <div style="d-flex">
                 <input type="checkbox" value="false" [attr.id]="'checkbox' + usrIndex" class="mr-3"
                   style="margin-top: 5px" (change)="clickCheckbox($event, user)" />
                 <span class="name"> {{ user.basicDetails?.name }}</span>
-                <span class="time mr-auto"> {{ formatLastLogin(user.lastLogin) }}</span>
+                <span class="time float-right"> {{ formatLastLogin(user.lastLogin) }}</span>
               </div>
               <span class="email">{{ user.username }}</span>
             </div>
@@ -135,8 +135,8 @@
                 <label class="no-attr-label">Not assigned to any groups</label>
                 <label class="no-attr-sub">
                   The user is not assigned to any groups</label>
-                <button type="button" class="btn btn-primary add-button mx-auto"
-                  id="addToGroup" (click)="openGroupModal()">
+                <button type="button" class="btn btn-primary add-button mx-auto" id="addToGroup"
+                  (click)="openGroupModal()">
                   Assign to group
                 </button>
               </div>
@@ -203,11 +203,11 @@
                   'fa-eye-slash': showPassword['new']
                 }" (click)="showPassword['new'] = !showPassword['new']"></span>
             </div>
-            <span class="fas fa-question-circle text-danger error-icon-password position-absolute" *ngIf="
+            <span class="fas fa-question-circle text-danger error-icon position-absolute" *ngIf="
                 resetPasswordForm.get('password').dirty &&
                 resetPasswordForm.get('password').hasError('required')
               " ngbTooltip="This is a required field"></span>
-            <span class="fas fa-question-circle text-danger error-icon-password position-absolute" *ngIf="
+            <span class="fas fa-question-circle text-danger error-icon position-absolute" *ngIf="
                 resetPasswordForm.get('password').dirty &&
                 resetPasswordForm.get('password').hasError('minlength')
               " ngbTooltip="Password should be minimum 8 chars long"></span>
@@ -226,11 +226,11 @@
                   'fa-eye-slash': showPassword['confirm']
                 }" (click)="showPassword['confirm'] = !showPassword['confirm']" id="showPassword"></span>
             </div>
-            <span class="fas fa-question-circle text-danger error-icon-password position-absolute" *ngIf="
+            <span class="fas fa-question-circle text-danger error-icon position-absolute" *ngIf="
                 resetPasswordForm.get('cpassword').dirty &&
                 resetPasswordForm.get('cpassword').hasError('required')
               " ngbTooltip="This is a required field"></span>
-            <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
+            <span class="fas fa-question-circle text-danger error-icon position-absolute"
               *ngIf="resetPasswordForm.get('cpassword').dirty && matchPwd" [ngbTooltip]="'Passwords don\'t match'"
               placement="right"></span>
           </div>
@@ -278,9 +278,9 @@
                   formControlName="username" odpAutoFocus (blur)="checkForDuplicate()" [ngClass]="{
                     'is-invalid': invalidUsername || invalidUsernamePattern
                   }" />
-                <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
-                  *ngIf="invalidUsername" ngbTooltip="This is a required field"></span>
-                <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
+                <span class="fas fa-question-circle text-danger error-icon position-absolute" *ngIf="invalidUsername"
+                  ngbTooltip="This is a required field"></span>
+                <span class="fas fa-question-circle text-danger error-icon position-absolute"
                   *ngIf="invalidUsernamePattern" ngbTooltip="Username must be of email format"></span>
               </div>
               <div class="form-group position-relative">
@@ -292,14 +292,13 @@
                   <input id="name" class="form-control pr-4 input-text" type="text" placeholder="Enter Name"
                     formControlName="name" [ngClass]="{ 'is-invalid': invalidName }"
                     autocomplete="autocomplete_off_hack" />
-                  <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
-                    *ngIf="invalidName" ngbTooltip="This is a required field"></span>
+                  <span class="fas fa-question-circle text-danger error-icon position-absolute" *ngIf="invalidName"
+                    ngbTooltip="This is a required field"></span>
                   <span *ngIf="
                       userForm
                         .get('userData.basicDetails?.name')
                         .hasError('pattern')
-                    " class="text-danger position-absolute fa fa-exclamation-circle error-icon-password"
-                    container="body"
+                    " class="text-danger position-absolute fa fa-exclamation-circle error-icon" container="body"
                     ngbTooltip="Name can contain alphanumeric and  _ ,- , @ , # and . characters only"></span>
                 </div>
               </div>
@@ -326,11 +325,11 @@
                         'fa-eye-slash': showPassword['new']
                       }" (click)="showPassword['new'] = !showPassword['new']"></span>
                   </div>
-                  <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
-                    *ngIf="invalidPassword" ngbTooltip="This is a required field"></span>
-                  <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
+                  <span class="fas fa-question-circle text-danger error-icon position-absolute" *ngIf="invalidPassword"
+                    ngbTooltip="This is a required field"></span>
+                  <span class="fas fa-question-circle text-danger error-icon position-absolute"
                     *ngIf="invalidPasswordLength" ngbTooltip="Password should be minimum 8 chars long"></span>
-                  <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
+                  <span class="fas fa-question-circle text-danger error-icon position-absolute"
                     *ngIf="invalidPasswordPattern"
                     ngbTooltip="Password must have one of following - Uppercase(A - Z), Lowercase(a - z), Special characters (!@#$%^&*?~) and Numbers (0 - 9)"></span>
                 </div>
@@ -352,9 +351,9 @@
                         showPassword['confirm'] = !showPassword['confirm']
                       "></span>
                   </div>
-                  <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
-                    *ngIf="invalidCPassword" ngbTooltip="This is a required field"></span>
-                  <span class="fas fa-question-circle text-danger error-icon-password position-absolute"
+                  <span class="fas fa-question-circle text-danger error-icon position-absolute" *ngIf="invalidCPassword"
+                    ngbTooltip="This is a required field"></span>
+                  <span class="fas fa-question-circle text-danger error-icon position-absolute"
                     *ngIf="invalidPasswordMatch" ngbTooltip="Passwords do not match"></span>
                 </div>
                 <div class="form-group">
@@ -486,8 +485,7 @@
                 " ngbTooltip="This is a required field"></span>
             </div>
           </div>
-          <button type="button" class="btn btn-primary add-button" id="addAttributes"
-            (click)="addAttribute()">
+          <button type="button" class="btn btn-primary add-button" id="addAttributes" (click)="addAttribute()">
             {{ editMode ? 'Save' : 'Add' }}
           </button>
         </form>
