--- a/src/app/home/local-bot/manage-bot-key/manage-bot-key.component.scss
+++ b/src/app/home/local-bot/manage-bot-key/manage-bot-key.component.scss
@@ -3,19 +3,24 @@
 
 .key-row {
   height: 40px;
+
   &:hover {
     .options {
       display: flex !important;
     }
+
     background: #ececec 0% 0% no-repeat padding-box;
   }
 }
+
 .options-cell {
   overflow: hidden;
 }
+
 table {
   width: calc(100vw - 735px);
 }
+
 .options {
   max-width: 350px;
   min-height: 38px;
@@ -32,6 +37,7 @@ table {
   overflow: hidden;
   display: inline-block;
 }
+
 .toolTip-msg {
   min-width: 207px;
   max-width: 228px;
@@ -56,9 +62,11 @@ table {
   border-left: solid 10px transparent;
   border-right: solid 10px transparent;
 }
+
 .date-width {
   width: 110px;
 }
+
 .label-width {
   width: 120px;
 }
@@ -77,6 +85,7 @@ table {
     top: 6px;
     font-weight: bold;
   }
+
   input {
     padding-right: 50px;
   }
@@ -85,4 +94,26 @@ table {
 .grid-container {
   height: calc(100vh - 322px);
   display: grid;
+}
+
+::ng-deep .swal2-title {
+  font-weight: 600;
+  font-size: 20px;
+  color: $headings;
+  margin-bottom: 28px;
+  position: absolute;
+  width: 148px;
+  height: 28px;
+  left: 501px;
+  top: 318px
+}
+
+.swal2-html-container {
+  position: absolute;
+  width: 403px;
+  height: 44px;
+  left: 501px;
+  top: 354px;
+  font-weight: 400;
+  font-size: 14px;
 }
