--- a/src/app/utils/ag-grid-actions-renderer/ag-grid-actions-renderer.component.scss
+++ b/src/app/utils/ag-grid-actions-renderer/ag-grid-actions-renderer.component.scss
@@ -1,3 +1,11 @@
+@import "src/assets/scss/bootstrap/_functions.scss";
+@import "src/assets/scss/bootstrap/_variables.scss";
+
 :host {
     display: inline-block;
+}
+
+.fa {
+    color: $sub-headings;
+    cursor: pointer;
 }
