--- a/src/app/utils/delete-modal/delete-modal.component.html
+++ b/src/app/utils/delete-modal/delete-modal.component.html
@@ -2,9 +2,9 @@
   <div class="delete-modal-body modal-body p-4 d-flex flex-column align-items-center ignore-outside">
     <div class="d-flex align-items-center justify-content-between mb-3 w-100">
       <div class="d-flex align-items-center">
-        <span class="icon-wrapper delete rounded-circle d-flex align-items-center justify-content-center mr-2">
+        <!-- <span class="icon-wrapper delete rounded-circle d-flex align-items-center justify-content-center mr-2">
           <ng-content></ng-content>
-        </span>
+        </span> -->
         <span class="font-weight-bold mb-1">{{data?.title}}</span>
       </div>
       <span class="fa fa-times text-muted hover ignore-click" (click)="deleteModalTemplateRef.close(false)"></span>
