--- a/src/app/utils/basic-info/basic-info.component.scss
+++ b/src/app/utils/basic-info/basic-info.component.scss
@@ -1,92 +1,6 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
-.thumbnail {
-  min-width: 48px;
-  max-width: 48px;
-  min-height: 48px;
-  max-height: 48px;
-}
 
-.wrapper {
-  .left-side,
-  .right-side {
-    min-height: 80px;
-    max-height: 80px;
-    min-width: 600px;
-    max-width: 600px;
-  }
-  .right-side {
-    min-width: 320px;
-    max-width: 320px;
-  }
-  .hover-class {
-    &:hover {
-      cursor: pointer;
-      background: #f2f2f2;
-      .edit-pen {
-        opacity: 1;
-      }
-    }
-  }
-  .edit-pen {
-    opacity: 0;
-  }
-  .title-container {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    width: 100%;
-    row-gap: 8px;
-    align-items: center;
-
-    .input-description{
-      overflow: hidden;
-      word-break: break-word;
-      line-height: 12px;
-      max-height: 48px;
-      max-width: 480px;
-    }
-  }
-}
-
-.backdrop {
-  background: rgba(#202a36, $alpha: 0.3);
-  z-index: 1001;
-  top: 0;
-  left: 0;
-}
-
-.editable-window {
-  z-index: 1002;
-  min-width: 840px;
-  max-width: 840px;
-  min-height: 0;
-  max-height: 0;
-  border-radius: 6px;
-  box-shadow: 0 6px 14px rgba(#000000, 0.1);
-  opacity: 0;
-  .details {
-    .image-options {
-      min-height: 56px;
-      max-height: 56px;
-    }
-    #name {
-      min-width: 272px;
-      max-width: 272px;
-    }
-    #description {
-      min-width: 544px;
-      max-width: 544px;
-      max-height: 60px;
-      resize: none;
-    }
-  }
-}
-.name-wrapper {
-  .fa-exclamation-circle {
-    top: 7px;
-    right: 275px;
-  }
-}
-.sup-top {
-  top:0px;
+.input-width {
+    min-width: 300px;
 }
