--- a/src/app/utils/round-radio/round-radio.component.scss
+++ b/src/app/utils/round-radio/round-radio.component.scss
@@ -8,7 +8,7 @@
         border-radius: 50%;
     }
     &.checked{
-        border: 1px solid $accent;
-        background: $accent;
+        border: 1px solid $dark;
+        background: $dark;
     }
 }
